--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,53 @@ header nav a {
     text-decoration: none;
     color: azure;
 }
+
+.row {
+    display: flex;
+    align-items: center;
+}
+
+.hamburger {
+    display: none;
+    width: 40px;
+    height: 40px;
+}
+
+.hamburger span {
+    width: 100%;
+    border-radius: 2px;
+    padding: 2px;
+    background-color: azure;
+    
+}
+
+.menuItemsBurger {
+    display: none;
+}
+
+@media only screen and (max-width: 710px) {
+    .menuItems {
+        display: none;
+    }
+
+    .activeBurgerMenu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hamburger {
+        display: flex;
+        margin-right: 10px;
+        flex-direction: column;
+        padding: 5px;
+        justify-content: space-around;
+        border: 2px solid rgb(114, 0, 0);
+        border-radius: 5px;
+    }
+
+}
+
 .aboutMe {
     margin: 0px 0px 100px 0;
 }
